--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 'ESIIL Working Group Home'
+site_name: 'ESIIL Education Student OASIS'
 site_description: 'Central resource for ESIIL working groups'
 site_author: Ty Tuff
 site_url: https://cu-esiil.github.io/Education_OASIS
